--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "projmgr"]
+	path = projmgr
+	url = https://github.com/emilyriederer/projmgr
+	shallow = true
+	registered = true
